# spacewords

./: .gitignore  .ruff.toml  README.md  pyproject.toml  spw-dict.txt
configs/weekly/: 251214.txt  251221.txt
src/: spwbot3.py
src/spacewords/: __init__.py  board.py  puzzle_config.py  wordlist.py
src/spacewords/solver/: __init__.py  config.py  parallel.py  solver.py  task_args.py  utils.py  worker.py
src/spacewords2/: __init__.py  __main__.py  board.py  slot.py  tiles.py  util.py  words.py
